fix(ui): increase react-select z-index

--- a/packages/ui/src/elements/ReactSelect/index.scss
+++ b/packages/ui/src/elements/ReactSelect/index.scss
@@ -6,6 +6,9 @@
   }
 
   .react-select {
+    &:focus-within {
+      z-index: 3;
+    }
     .rs__control {
       @include formInput;
       height: auto;
